[package]
name = "winit-video-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
  "cdylib", # c/c++ compatible library (to create web assembly that the browser will run)
  "rlib" # rust static library (to run wgpu in desktop environment)
]

 # This should go in the Cargo.toml in the root directory
[profile.release]
strip = true


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# Error Handling
anyhow = "1.0"

# Math
cgmath = "0.18"

# Logging
log = "0.4"
console_log = "1.0"

# casting
bytemuck = { version = "1.16", features = [ "derive" ] }

# Utilities
raw-window-handle = "0.5"
winit = { version = "0.30.12", features = ["android-native-activity"] }

# WGPU
wgpu = "25.0"

# Async
pollster = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }

# image
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.6"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

# Tracing
